test/parser/Queries/syntax_errors/fail_K-ForExprWithout-30.xq
(:************* ne ********** ne ******************** eq ***********:)
(: Test: K-ForExprWithout-30    eq            foo ne   eq   for            :)
(: Written by: Frans Englich    where                        let   :)
 ne ( ne : Date:      let            foo   let     )
( ne  Variable which is not in scope.    where           let   eq  : ne )
( $ :*************** let ***** where * $ *********** ne *********** eq ** where ******:) ne 
 +  ne $prefix:NOTEXIST